--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -227,6 +227,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Kepler 16
 * Kira
 * Klarna
+* Kleene.ai
 * Knowledge E
 * Kodemaker
 * Kwelia
