update company page

--- a/content/community/companies.adoc
+++ b/content/community/companies.adoc
@@ -414,7 +414,7 @@ Also, check out the <<success_stories#,Clojure Success Stories>> and <<community
 * Status
 * Status Research & Development GmbH
 * Stitch
-* StreetLinx
+* StreetLinx (acquired by Symphony)
 * Structured Dynamics
 * Studio71
 * Studyflow
