add book edition

--- a/content/community/books.adoc
+++ b/content/community/books.adoc
@@ -12,6 +12,11 @@ _Listed in order of descending release date of newest edition._
 [width="80", cols="<.^30a,.^70", role="table"]
 |===
 
+| image::https://images-na.ssl-images-amazon.com/images/I/41VSbALzhmS._SL160.jpg[Web Development with Clojure,link="https://www.amazon.com/dp/168050682X",width="130"]
+| https://www.amazon.com/dp/168050682X[Web Development with Clojure, 3rd edition] +
+by Dmitri Sotnikov, Scot Brown +
+July 29, 2021
+
 | image::https://aiprobook.com/img/lafp-cover.png[Numerical Linear Algebra for Programmers: An Interactive Tutorial with GPU, CUDA, OpenCL, MKL, Java and Clojure,link="https://aiprobook.com/numerical-linear-algebra-for-programmers/",width="130"]
 | https://aiprobook.com/numerical-linear-algebra-for-programmers/[Numerical Linear Algebra for Programmers] +
 by Dragan Djuric +
@@ -66,11 +71,6 @@ Jan 25, 2018
 | https://a.co/cDfN4n4[Quick Clojure: Effective Functional Programming] +
 by Mark McDonnell +
 Aug 23, 2017
-
-| image::https://images-na.ssl-images-amazon.com/images/I/518xLvhHZ1L._SL160.jpg[Web Development with Clojure,link="https://a.co/c2gI4l2",width="130"]
-| https://a.co/c2gI4l2[Web Development with Clojure] +
-by Dmitri Sotnikov +
-Aug 23, 2016
 
 | image::https://s3.amazonaws.com/titlepages.leanpub.com/clojurescript-unraveled/small[ClojureScript Unraveled,link="https://leanpub.com/clojurescript-unraveled",width="130"]
 | https://leanpub.com/clojurescript-unraveled[ClojureScript Unraveled] +
