--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,16 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.10.3.943 (Aug 13, 2021) [[v1.10.3.943]]
+
+* https://clojure.atlassian.net/browse/TDEPS-199[TDEPS-199] Use default http-client in S3 transporter
+* Cache S3 transporter for a repo
+* Fixed session cache to work properly across threads / binding stacks for better perf
+* Replace specific maven version range requests with non-range request to reduce repo metadata lookups
+* Load and cache Maven settings once for perf
+* Cache version range resolution results for perf
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.12.1019
+
 === 1.10.3.933 (July 28, 2021) [[v1.10.3.933]]
 
 * deps.edn
