--- a/content/news/2021/08/27/deref.adoc
+++ b/content/news/2021/08/27/deref.adoc
@@ -20,7 +20,7 @@ Fogus has continued to work on https://ask.clojure.org/index.php/1926/adding-fun
 == Blogs
 
 * https://www.clojuriststogether.org/news/long-term-funding-selections/[Long-term funding selections] - Daniel Compton
-* https://cuddly-octo-palm-tree.com/posts/2021-08-22-cwafi-10/[Cheap interpreter, part 10: fastest one yet, then a hundred times faster] - Carmen La
+* https://cuddly-octo-palm-tree.com/posts/2021-08-22-cwafi-10/[Cheap interpreter, part 10: fastest one yet, then a hundred times faster] - Gary Verhaegen
 * https://dev.to/hlship/down-the-rabbit-hole-with-clojure-defrecord-and-macros-3aal[Down the rabbit hole with Clojure, defrecord, and macros] - Howard Lewis Ship
 * https://lambdaisland.com/blog/2021-08-25-classpath-is-a-lie[The Classpath is a Lie] - Lambda Island
 * https://corfield.org/blog/2021/08/25/deps-edn-monorepo-5/[deps.edn and monorepos V (Polylith)] - Sean Corfield
