--- a/content/news/2021/08/27/deref.adoc
+++ b/content/news/2021/08/27/deref.adoc
@@ -9,7 +9,9 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Highlights
 
-I'd like to highlight the SciCloj community this week and point you to their https://scicloj.github.io/landing-page/[brand new web page]. So many people doing great work in this area and I appreciate the continued time and attention here. This is an area where Clojure can (and does!) shine but people are not as familiar with it as an option. Check it out and get involved if you're interested.
+I'd like to highlight the SciCloj community this week. This recent https://www.youtube.com/watch?v=Qa89bqEqA8k[video] is a great overview of what's going on. They are working on a https://scicloj.github.io/landing-page/[brand new web page] which will be getting improved in the coming weeks.
+
+So many people doing great work in this area and I appreciate the continued time and attention here. This is an area where Clojure can (and does!) shine but people are not as familiar with it as an option. Check it out and get involved if you're interested.
 
 == In the core
 
