--- a/content/releases/tools.adoc
+++ b/content/releases/tools.adoc
@@ -22,6 +22,13 @@ For more information see the following docs:
 
 Recent official releases are described here. Prereleases and older versions can be found in the https://github.com/clojure/brew-install/blob/1.10.3/CHANGELOG.md[repo changelog].
 
+=== 1.10.3.967 (Sep 1, 2021) [[v1.10.3.967]]
+
+* Refine exec exceptions for missing namespace vs missing function in namespace
+* Replace Maven-based build process with tools.build
+* Compile entry points in tools.deps used for building classpaths for performance
+* Use https://github.com/clojure/tools.deps.alpha/blob/master/CHANGELOG.md[tools.deps.alpha] 0.12.1036
+
 === 1.10.3.943 (Aug 13, 2021) [[v1.10.3.943]]
 
 * https://clojure.atlassian.net/browse/TDEPS-199[TDEPS-199] Use default http-client in S3 transporter
