--- a/content/news/2021/09/03/deref.adoc
+++ b/content/news/2021/09/03/deref.adoc
@@ -62,4 +62,4 @@ New releases and tools this week:
 
 == Video Throwback
 
-I'm very happy this week to release a new edit of https://youtu.be/LKtk3HCgTa8[]"Simple Made Easy" by Rich Hickey], which was first given as the closing keynote at Strange Loop 2011, 10 years ago. To make this edit, I used the original HD video and Rich's original slides with all the bullet/slide transitions and animations, so this is as close as you'll get to how it was originally given in the room. Enjoy this classic!
+I'm very happy this week to release a new edit of https://youtu.be/LKtk3HCgTa8["Simple Made Easy" by Rich Hickey], which was first given as the closing keynote at Strange Loop 2011, 10 years ago. To make this edit, I used the original HD video and Rich's original slides with all the bullet/slide transitions and animations, so this is as close as you'll get to how it was originally given in the room. Enjoy this classic!
