--- a/content/news/2021/09/10/deref.adoc
+++ b/content/news/2021/09/10/deref.adoc
@@ -9,7 +9,7 @@ Welcome to the Clojure Deref! This is a weekly link/news roundup for the Clojure
 
 == Highlights
 
-The Call for Papers is now open for [re:Clojure](https://www.reclojure.org/), a virtual Clojure conference Dec 3-4, and the inimitable Professor Sussman will be doing the keynote! Looking forward to attending!
+The Call for Papers is now open for https://www.reclojure.org/[re:Clojure], a virtual Clojure conference on Dec 3-4, and the inimitable Professor Sussman will be doing the keynote! Looking forward to attending!
 
 https://exercism.org[Exercism] has a brand new https://exercism.org/tracks/clojure/concepts[Clojure course] (shoutout to Bobby Towers and everyone that contributed). They are interested in feedback, so give it a look!
 
