--- a/content/news/2021/09/10/deref.adoc
+++ b/content/news/2021/09/10/deref.adoc
@@ -27,7 +27,7 @@ I've been looking at a variety of things this week related to ease of use around
 == Blogs
 
 * https://xtdb.com/blog/crux-to-xtdb-rename.html[Crux is evolving into XTDB] - Jeremy Taylor
-* https://tonsky.me/blog/clojure-ui/[Thoughts on Clojure UI framework] - Nikita Tonsky
+* https://tonsky.me/blog/clojure-ui/[Thoughts on Clojure UI framework] - Nikita Prokopov
 * https://www.jocas.lt/blog/post/deftype-unsynchronized-mutable/[Clojure deftype with `unsynchronized-mutable`] - Dainius Jocas
 * https://www.metosin.fi/blog/my-first-project-at-metosin/[My First Project at Metosin!] - Kari Marttila
 
