added London Clojurians community links

--- a/content/community/user_groups.adoc
+++ b/content/community/user_groups.adoc
@@ -125,7 +125,7 @@ Riviera Scala, (Twitter: https://twitter.com/riviera_func[@riviera_func])
 ** Switzerland
 *** https://www.meetup.com/zh-clj-Zurich-Clojure-User-Group/[Zürich Clojure User Group]
 ** UK
-*** London Clojurians
+*** https://www.meetup.com/London-Clojurians/[London Clojurians] (https://londonclojurians.org/[website], https://twitter.com/ldnclj[@ldnclj], https://www.youtube.com/c/LondonClojurians[YouTube], https://opencollective.com/london-clojurians[Sponsors])
 *** Manchester Clojure Dojo
 *** https://www.meetup.com/Cambridge-NonDysFunctional-Programmers/[Cambridge NonDysFunctional Programmers] and https://groups.google.com/forum/#!forum/camclj[Cambridge Clojure User Group] mailing list
 *** https://www.meetup.com/Bristol-Clojurians/[Bristol Clojurians]
